	- Set ecpg version to 2.7.0.

Mon May 15 10:51:31 CEST 2000

	- Added patch by SAKAIDA Masaaki <sakaida@psn.co.jp> to fix segfault.
	- Set ecpg version to 2.7.1.

Wed May 17 07:52:59 CEST 2000

	- Added patch by SAKAIDA Masaaki <sakaida@psn.co.jp> to fix array
	  handling.
	- Set library version to 3.1.1.

Mon Sep  4 14:10:38 CEST 2000

	- Synced preproc.y with gram.y.  
	- Synced keyword.c. 

Mon Sep 18 13:55:11 CEST 2000

	- Added int8 support based on a patch by Martijn Schoemaker <martijn@osp.nl>

Wed Sep 20 12:40:27 CEST 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> to process
	  backend NOTICEs.
	- Added patch by Christof Petig <christof.petig@wtal.de> to cache
	  type information.

Thu Sep 21 13:54:13 CEST 2000

	- Enabled parser to accept ip addresses instead of host names.

Tue Sep 26 13:00:16 CEST 2000

	- Synced preproc.y with gram.y.
        - Synced keyword.c.   
	- Added patch by Christof Petig <christof.petig@wtal.de> to fix NOT
	  FOUND problem on update/insert/delete.

Wed Oct  4 14:36:51 CEST 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> to fix
	  missing NOTICE.

Wed Oct 11 16:49:36 CEST 2000

	- Synced preproc.y with gram.y.

Thu Oct 12 20:13:00 CEST 2000

	- Changed parser to accept a variable instead of a constant wherever
	  possible.

Mon Oct 16 21:33:17 CEST 2000

	- Fixed handling of variables in connect rule.

Tue Oct 17 08:09:16 CEST 2000

	- Simplified parsing of connect rule.

Tue Oct 17 17:36:30 CEST 2000

	- Fixed some bugs in C language parsing. 

Sun Oct 22 15:35:53 CEST 2000

	- Fixed typos in descriptor.c.

Wed Oct 25 08:53:07 CEST 2000

	- Added some more C constructs to the parser.

Wed Oct 25 21:22:17 CEST 2000

	- Synced gram.y and preproc.y.

Son Oct 29 11:26:06 CET 2000

	- Removed multibyte stuff since client does not know about encoding
	  in the backend.
	- Fixed quoting bug reported by Sascha Demetrio (sd@b-comp.de).
	- Set ecpg version to 2.8.0. 
	- Set library version to 3.2.0.